Fixed spacing between footer and favorite books

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -75,7 +75,7 @@
     align-items: center;
     width: 90%;
     max-width: 1000px;
-    margin: 50px 0 80px;
+    margin: 50px 0 20px;
     padding: 50px;
 
     background: rgba(245, 241, 231, 0.5);
